fix: corrected links spacing

--- a/elements/rh-footer/rh-footer.css
+++ b/elements/rh-footer/rh-footer.css
@@ -215,15 +215,16 @@ pfe-accordion {
 
   display: grid;
   grid-template-columns: 1fr;
-  gap: calc(var(--rh-footer-links-column-gap, var(--rh-space-2xl, 32px)) / 2);
+  gap: calc(var(--rh-space-2xl, 32px) / 2);
 }
 
 [part="base"]:not(.isMobile) .links {
   display: grid;
   grid-template-columns: repeat(1fr, 25%);
   grid-template-rows: repeat(2, min-content auto);
-  gap: var(--rh-footer-links-column-gap, var(--rh-space-2xl, 32px));
   grid-auto-columns: minmax(0, 1fr);
+  row-gap: var(--rh-space-lg, 16px);
+  column-gap: var(--rh-space-2xl, 32px);
   grid-auto-flow: column;
 }
 
@@ -308,15 +309,9 @@ pfe-accordion {
 }
 
 [part="base"]:not(.isMobile) .links ::slotted(ul) {
-  gap: var(--rh-footer-links-gap, var(--rh-space-md, 8px));
+  gap: var(--rh-footer-links-gap, var(--rh-space-lg, 16px));
   display: flex;
   flex-direction: column;
-  margin-block-start:
-    calc(
-      var(--rh-footer-links-column-gap, var(--rh-space-2xl, 32px))
-      * -1
-      + var(--rh-footer-links-gap, var(--rh-space-md, 8px))
-    ) !important;
 }
 
 #footer-logo {
